guestbook-with-ingress/guestbook-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-ui
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      containers:
      # - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
      # - image: ks-guestbook-demo:0.2
      # third time it changes
      - image: kuokou1/ks-guestbook-demo:0.2
        name: guestbook-ui
        ports:
        - containerPort: 80
