guestbook-with-ingress/guestbook-ui-infress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /guestbook*
        pathType: Prefix
        backend:
          service:
            name: guestbook-ui
            port:
              number: 80
